--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
   z-index: 0;
   position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
+  left: 10%;
   bottom: 0;
   width: 100%;
   height: 100%;
