--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  overflow: visible;
   scroll-behavior: smooth;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
