--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.sidenav {
+  width: 25vw !important;
+}
+
 .app-wrapper {
   margin-top: 3rem;
   min-height: 100vh;
@@ -1202,6 +1206,7 @@
   }
 }
 
+/* Centering bg in desktop */
 @media (min-width: 2000px) {
   .bg-animation {
     right: 10%;
