--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+#root {
+  background-color: #494850;
+  padding-bottom: 5rem;
+  min-height: 100vh;
+}
+
 body {
   color: rgb(33, 37, 41);
   overflow: visible;
